--- a/Phase_1/Part_A/views/edit.ejs
+++ b/Phase_1/Part_A/views/edit.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wanderlust - Edit your listing</title>
-    <link rel="stylesheet" href="/new.css">
+    <link rel="stylesheet" href="/css/new.css">
 </head>
 <body>
     <center>
