--- a/Phase_1/Part_A/views/layouts/boilerplate.ejs
+++ b/Phase_1/Part_A/views/layouts/boilerplate.ejs
@@ -25,10 +25,20 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <%- include("../includes/navbar.ejs") %>
-    <div class="container"><%- body %></div>
-    <%- include("../includes/footer.ejs") %>
+    <div class="page-container">
+      <!-- Navbar -->
+      <%- include("../includes/navbar.ejs") %>
 
+      <!-- Main Page Content -->
+      <main class="content-wrap container">
+        <%- body %>
+      </main>
+
+      <!-- Footer -->
+      <%- include("../includes/footer.ejs") %>
+    </div>
+
+    <!-- Bootstrap + JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
