--- a/public/css/show.css
+++ b/public/css/show.css
@@ -1,4 +1,3 @@
-
 /* ====================== CSS on Show.ejs ============================ */
 .wanderlust-page {
   background: linear-gradient(to bottom right, #f9f9f9, #f0f7f8);
@@ -6,7 +5,7 @@
 }
 
 .wanderlust-title {
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-size: 2.5rem;
   font-weight: 700;
   color: #2b2b2b;
@@ -16,7 +15,7 @@
   border-radius: 12px;
   background: #fff;
   border: 2px solid #e0c3a3;
-  text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .wanderlust-subtext {
@@ -115,4 +114,24 @@
   .wanderlust-title {
     font-size: 2rem;
   }
+}
+
+.review {
+  text-align: start;
+  padding-left: 2rem;
+}
+
+#comment {
+  height: 5rem;
+  width: 75%;
+  border-radius: 0.5rem;
+  margin-left: 10%;
+}
+
+.review-btn {
+  background-color: black;
+  margin-top: 1rem;
+}
+.review-btn:hover {
+  background-color: rgb(35, 196, 54);
 }
