--- a/views/show.ejs
+++ b/views/show.ejs
@@ -26,12 +26,36 @@
 
         <div class="d-flex justify-content-center flex-wrap">
           <form action="/listing/edit/<%= listing._id %>" method="get">
-            <button class="wanderlust-btn edit-btn">Edit Listing</button> 
+            <button class="wanderlust-btn edit-btn">Edit Listing</button>
           </form>
-          <form action="/listing/delete/<%= listing._id %>?_method=DELETE" method="post">
+          <form
+            action="/listing/delete/<%= listing._id %>?_method=DELETE"
+            method="post"
+          >
             <button class="wanderlust-btn delete-btn">Delete Listing</button>
           </form>
         </div>
+      </div>
+      <hr />
+      <div class="review">
+        <h3>Leave a Review</h3>
+        <form action="" method="post">
+          <div>
+            <label for="rating" class="form-label">Rating</label>
+            <input
+              type="range"
+              name="review[rating]"
+              min="1"
+              max="5"
+              id="rating"
+            />
+          </div>
+          <div>
+            <label for="comment" class="form-label">Comments</label> <br />
+            <textarea name="review[comment]" id="comment" class="form-control"></textarea>
+          </div>
+          <button class="wanderlust-btn review-btn">Submit</button>
+        </form>
       </div>
     </div>
   </div>
