Organized the code using express router.

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col-8 offset-2">
       <form
-        action="/listing/edit/<%=listing._id%>?_method=PUT"
+        action="/listings/edit/<%=listing._id%>?_method=PUT"
         method="post"
         novalidate
         class="needs-validation"
