--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,7 +5,7 @@
   <% layout("/layouts/boilerplate.ejs") %>
   <div class="row">
     <div class="col-8 offset-2">
-      <form action="/listing/new" method="post" novalidate class="needs-validation">
+      <form action="/listings/new" method="post" novalidate class="needs-validation">
         <div class="mb-3">
           <label for="title" class="form-label">Title</label>
           <input
