--- a/views/listing.ejs
+++ b/views/listing.ejs
@@ -7,7 +7,7 @@
   <br />
   <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-2">
     <% for(listing of allListing) { %>
-    <a href="/listing/<%= listing._id %>" class="listing-link">
+    <a href="/listings/<%= listing._id %>" class="listing-link">
       <div class="card col">
         <div class="card-img-overlay"></div>
         <img src="<%= listing.image %>" class="card-img-top" alt="..." />
