--- a/views/show.ejs
+++ b/views/show.ejs
@@ -25,11 +25,11 @@
         </div>
 
         <div class="d-flex justify-content-center flex-wrap">
-          <form action="/listing/edit/<%= listing._id %>" method="get">
+          <form action="/listings/edit/<%= listing._id %>" method="get">
             <button class="wanderlust-btn edit-btn">Edit Listing</button>
           </form>
           <form
-            action="/listing/delete/<%= listing._id %>?_method=DELETE"
+            action="/listings/delete/<%= listing._id %>?_method=DELETE"
             method="post"
           >
             <button class="wanderlust-btn delete-btn">Delete Listing</button>
@@ -46,7 +46,7 @@
             <div class="card-body">
               <h5 class="card-title">Rating: <%= review.rating %>/5</h5>
               <p class="card-text"><%= review.comment %></p>
-              <form action="/listing/<%= listing._id %>/review/<%= review._id %>?_method=DELETE" method="post">
+              <form action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" method="post">
                 <button class="wanderlust-btn delete-review-btn">
                   Delete Review
                 </button>
@@ -60,7 +60,7 @@
       <div class="review">
         <h3>Leave a Review</h3>
         <form
-          action="/listing/<%= listing._id %>/review"
+          action="/listings/<%= listing._id %>/reviews"
           method="post"
           novalidate
           class="needs-validation"
